Fix input overlap

--- a/src/components/Slider/Slider.module.less
+++ b/src/components/Slider/Slider.module.less
@@ -21,16 +21,15 @@
 
 .counterInputContainer {
   border: var(--border-primary) !important;
-  max-width: 80px;
+  max-width: 76px;
   position: relative;
 
   input {
     height: 38px;
     min-width: 40px;
-    padding-right: 22px;
 
     @media (max-width: 640px) {
-      padding: 8px 4px;
+      padding: 8px 22px 8px 4px !important;
     }
   }
 }
